@@ -12,6 +12,7 @@ S3method(plot,sj_inequ_trend)
 S3method(predict,svyglm.nb)
 S3method(print,icc.lme4)
 S3method(print,se.icc.lme4)
+S3method(print,sj_grpmean)
 S3method(print,sj_mwu)
 S3method(print,sj_resample)
 S3method(print,sj_splithalf)
@@ -49,6 +50,7 @@ export(deff)
 export(eta_sq)
 export(get_model_pval)
 export(get_re_var)
+export(grpmean)
 export(heteroskedastic)
 export(hoslem_gof)
 export(icc)
@@ -136,6 +138,7 @@ importFrom(nlme,getResponse)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_dbl)
+importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_df)
 importFrom(purrr,map_if)
@@ -144,6 +147,7 @@ importFrom(pwr,pwr.f2.test)
 importFrom(rlang,.data)
 importFrom(sandwich,vcovHC)
 importFrom(sjlabelled,as_numeric)
+importFrom(sjlabelled,drop_labels)
 importFrom(sjlabelled,get_label)
 importFrom(sjlabelled,get_labels)
 importFrom(sjmisc,add_columns)
@@ -152,6 +156,7 @@ importFrom(sjmisc,is_num_fac)
 importFrom(sjmisc,recode_to)
 importFrom(sjmisc,std)
 importFrom(sjmisc,str_contains)
+importFrom(sjmisc,to_value)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
@@ -197,6 +202,7 @@ importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,var)
 importFrom(stats,vcov)
+importFrom(stats,weighted.mean)
 importFrom(stats,weights)
 importFrom(stats,wilcox.test)
 importFrom(stats,xtabs)
