@@ -3,6 +3,9 @@ Version 0.11.0
 General:
 * Added vignettes for various functions.
 
+New functions:
+* `grpmean` to compute mean values by groups (One-way Anova).
+
 Version 0.10.3
 ------------------------------------------------------------------------------
 New functions:
